--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,75 @@ body{
     align-items: center;
     justify-content: center;
 }
+.calc-card {
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    justify-content: space-between;
+    padding: 30px;
+    border-radius: 10px;
+    align-items: flex-start;
+}
+.calc-card:first-child{
+    background-color: #2e7d32;
+}
+.history {
+    display: flex;
+    justify-content: center; /* Center items horizontally */
+    gap: 20px;
+    margin-top: 60px;
+}
+
+.prev-res{
+    width: calc(50% - 10px); /* Adjust the width as needed */
+    padding: 20px;
+    height: 500px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #263043;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+#report1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+.reports {
+    margin-top: 50px;
+    font-size: 30px;
+    font-family: "Roboto";
+}
+
+.input-container {
+    display: flex;
+    align-items:center; 
+}
+.reports-container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+#fileInput {
+    margin-right: 100px; 
+    margin-left: 1000px;
+    padding: 10px 20px; /* Adjust padding to make the button larger */
+    font-size: 16px; /* Adjust font size for the button text */ 
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+#submitButton{
+    padding: 10px 20px; /* Adjust padding to make the button larger */
+    font-size: 16px; /* Adjust font size for the button text */ 
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+#transactionLog {
+    text-align: center;
+}
+
 
 @media screen and (max-width: 992px) {
     .grid-container{
