--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,15 @@ body{
     gap: 20px;
     margin-top: 60px;
 }
+.chart-card{
+    background-color: #263043;
+    margin-bottom: 50px;
+    padding: 50px;
+    box-sizing: border-box;
+    -webkit-column-break-inside: avoid;
+    border-radius: 5px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+}
 .charts-card{
     background-color: #263043;
     margin-bottom: 20px;
@@ -130,7 +139,7 @@ body{
     border-radius: 5px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
 }
-.chart-title{
+.charts-title{
     display: flex;
     align-items: center;
     justify-content: center;
